Fix letter-spacing for h1

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -24,7 +24,7 @@
 h1 {
     font-family: 'Teko', sans-serif;
     text-transform: uppercase;
-    letter-spacing: -0.05em;
+    letter-spacing: -0.03em;
 }
 
 p, li {
